--- a/index.html
+++ b/index.html
@@ -1,12 +1,195 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Accueil Site Bootstrap Aristide Bassolé</title>
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- font awesome sources -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <!-- CSS PERSO -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <!-- ROW  HEADER-->
+        <div class="row">
+            <header class="col-12 col-md-12">
+                <!-- ROW PRESENTATION-->
+                <div class="row">
+                    <div class="col-md-6 text-center presentation">
+                        <h1 class="titre_principal" id="ancre_h1"><em>Aristide Bassolé Développeur Web</em> en
+                            recherche <span id="adoption">d'adoption<i class="fas fa-heart"></i></span></h1>
+                        <p>
+                            Passionné par le Web et autodidacte, je cherche à consolider des bases acquises après un
+                            dur labeur en autoformation et présentiel intensif. Mes neuf vies m'ont permis d'apprendre
+                            à m'adapter et à m'accrocher en toutes circonstances alors n'attendez plus et adoptez moi
+                            Miaou !
+                        </p>
+                        <p><i class="fas fa-cat signature_cat"></i></p>
+                    </div>
+                    <div class="col-md-6">
+                        <figure class="text-center figure_chat">
+                            <img src="assets/img/chat.png" class="img-chat figure-img img-fluid  " alt="Image chat">
+                        </figure>
+                    </div>
+                    <!-- END ROW PRESENTATION -->
+                </div>
+            </header>
+        </div>
+        <!-- END ROW HEADER-->
+
+        <!-- ROW NAV -->
+        <div class="row">
+            <nav class="nav nav-pills nav-justified col-12 col-md-12 rounded">
+                <a class="nav-item nav-link active" href="#">Accueil <i class="fas fa-home"></i></a>
+                <a class="nav-item nav-link" href="centre_interets.html">Centre d'intérêts <i class="fas fa-bowling-ball"></i></a>
+                <a class="nav-item nav-link" href="cv/cv.html" target="_blank">Curriculium Vitae <i class="fas fa-university"></i><i
+                        class="fas fa-pen"></i></a>
+                <a class="nav-item nav-link" href="contact.html" tabindex="-1">Contact <i class="fas fa-address-card"></i></a>
+            </nav>
+        </div>
+        <!-- FIN ROW NAV -->
+
+        <!-- ROW MAIN -->
+        <div class="row">
+            <main class="col-12 col-md-12">
+                <div class="jumbotron">
+                    <h1 class="display-4 miaou">Miaou, world !</h1>
+                    <p class="lead">Voici mon site de démonstration Bootstrap qui présente quelques informations sur
+                        moi comme mon parcours, mes activités extérieures et les moyens de me contacter.</p>
+                    <hr class="my-4">
+                    <p>Il utilise plusieurs fonctionnalités comme le système de grille, des classes avec des styles
+                        prédéfinis, boutons, barres de navigation, carroussels ainsi que du ainsi que jQuery, ajax et
+                        php pour le formulaire. Vous pourrez aussi trouver un CV plus détaillé sur moi fait "from
+                        scratch" dans la rubrique <a href="">Curriculium Vitae.</a></p>
+                    <p>Bonne visite <i class="fas fa-cat signature_cat"></i></p>
+                    <a class="btn btn-primary btn-lg " href="https://fr.vikidia.org/wiki/Chat" target="_blank" role="button">Découvrir
+                        mon espèce..</a>
+                </div>
+                <section id="parcours" class="">
+                    <h3 class="text-center">Mon apprentissage autodidacte <i class="fas fa-chalkboard-teacher"></i></h3>
+                    <!-- ROW SECTION-->
+                    <div class="row text-center">
+                        <div class="col-md-4">
+                            <figure>
+                                <a href="https://openclassrooms.com" target="_blank"><img src="assets/img/logos/Logo_OpenClassrooms.png"
+                                        alt="" class="logo_parcours"></a>
+                                <figcaption class="text-center" style="color : darkblue"><span class="primary_info">OpenClassrooms</span>,
+                                    4 certificats de réussite </figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-4">
+                            <figure>
+                                <a href="https://www.freecodecamp.org/" target="_blank"><img src="assets/img/logos/freecode.jpg"
+                                        alt="" class="logo_parcours"></a>
+                                <figcaption class="text-center" style="color : forestgreen"><span class="primary_info">Freecodecamp</span>,
+                                    exercices en ligne</figcaption>
+                            </figure>
+                        </div>
+                        <div class="col-md-4">
+                            <figure>
+                                <a href="https://www.udemy.com/" target="_blank"><img src="assets/img/logos/udemy.jpg"
+                                        alt="" class="logo_parcours"></a>
+                                <figcaption class="text-center" style="color : orangered"><span class="primary_info">Udemy</span>,
+                                    cours en ligne</figcaption>
+                            </figure>
+                        </div>
+                    </div>
+                    <!-- FIN ROW SECTION-->
+                </section>
+            </main>
+        </div>
+        <!-- FIN ROW MAIN -->
+
+        <!-- ROW FOOTER -->
+        <div class="row">
+            <footer class="col-12 col-md-12">
+                <!-- ROW NAVBAR -->
+                <div class="row">
+                    <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-md-12">
+                        <a class="navbar-brand" href="#ancre_h1">Haut de page</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+
+                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                            <ul class="navbar-nav mr-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#ancre_h1">Accueil <i class="fas fa-home"></i> <span
+                                            class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="centre_interets.html">Centre d'intérêts <i class="fas fa-bowling-ball"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="cv/cv.html" target="_blank">Curriculium Vitae <i class="fas fa-university"></i>
+                                        <i class="fas fa-pen"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="contact.html">Contact <i class="fas fa-address-card"></i></a>
+                                </li>
+                            </ul>
+                            <form class="form-inline my-2 my-lg-0">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-light my-2 my-sm-0 bg-success" type="submit">Search</button>
+                            </form>
+                        </div>
+                    </nav>
+                </div>
+                <!-- END ROW NAVBAR -->
+
+                <!-- ROW TITRE CONTACT SOCIAL-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="titre_secondaire text-center">Me contacter<i class="fas fa-cat"></i></h2>
+                    </div>
+                </div>
+                <!-- FIN ROW TITRE CONTACT SOCIAL-->
+
+                <!-- ROW CONTACT SOCIAL-->
+                <div class="row">
+                    <div class="col-md-6">
+                        <p><i class="fas fa-envelope lien_contact"></i> <a href="mailto:bassole.aristide@laposte.net"
+                                class="lien_contact">bassole.aristide@laposte.net</a></p>
+                        <p><i class="fas fa-file-download lien_contact"></i> <a href="assets/files/CV_Aristide_Bassolé.pdf"
+                                target="blank" title="Ouvrir dans un nouvel onglet ou télécharger" class="lien_contact">Mon
+                                CV (pdf)</a></p>
+                        <h3 class="titre_iframe"><i class="fas fa-map-marker-alt"></i> Me trouver</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5480121.578836245!2d0.4985675391186005!3d47.88141302629982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701c64657be9%3A0xbf05ba902bfe4aab!2s3w+Academy!5e0!3m2!1sfr!2sfr!4v1547133545632"
+                            style="border:0" allowfullscreen class=img-thumbnail></iframe>
+                    </div>
+                    <div class="col-md-6 d-flex p-2 justify-content-around div_social">
+                        <div>
+                            <a href="https://www.linkedin.com/in/aristidebassole/" target="_blank" title="Linkedin"><img
+                                    src="cv/logos/iconfinder_circle-linkedin_317750.png" alt="Linkedin" class="social_img img-fluid" /></a>
+                        </div>
+                        <div>
+                            <a href="https://twitter.com/Ari_Btw" target="_blank" title="twitter"><img src="cv/logos/iconfinder_circle-twitter_317749.png"
+                                    alt="Twitter" class="social_img img-fluid" /></a>
+                        </div>
+                        <div>
+                            <a href="https://github.com/Ariwf3" target="_blank" title="github"><img src="cv/logos/iconfinder_github_317712.png"
+                                    alt="Github" class="social_img img-fluid" /></a>
+                        </div>
+                        <div>
+                            <a href="https://www.facebook.com/" target="_blank" title="facebook"><img src="cv/logos/iconfinder_circle-facebook__317752.png"
+                                    alt="Github" class="social_img img-fluid" /></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- END ROW CONTACT SOCIAL-->
+            </footer>
+        </div>
+        <!-- FIN ROW FOOTER -->
+    </div>
+    <!-- END CONTAINER -->
+
 </body>
+
 </html>
