redimensionnement de toutes les images hauteur réduite

--- a/centres_interet.html
+++ b/centres_interet.html
@@ -33,7 +33,7 @@
 
     <!-- ROW NAV -->
     <div class="row">
-        <nav class="nav nav-pills nav-justified col-md-12 container-fluid rounded">
+        <nav class="nav nav-pills nav-justified col-12 container-fluid rounded flex-column flex-sm-row">
             <a class="nav-item nav-link" href="index.html">Accueil <i class="fas fa-home"></i></a>
             <a class="nav-item nav-link active" href="#">Centre d'intérêts <i class="fas fa-bowling-ball"></i></a>
             <a class="nav-item nav-link" href="https://ariwf3.github.io/CV/" target="_blank">Curriculum Vitae <i class="fas fa-university"></i><i class="fas fa-pen"></i></a>
@@ -46,7 +46,7 @@
     <div class="container">
         <!-- DEBUT ROW MAIN-->
         <div class="row">
-            <main class="col-md-12">
+            <main class="col-12">
                 <!-- Dropdown-->
                 <div class="dropdown dropright text-center dropdow_centres_interets">
                     <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,6 +60,8 @@
                         <a class="dropdown-item" href="#lecture">Lecture</a>
                     </div>
                 </div>
+                <!-- Fin Dropdown-->
+
                 <!-- SECTION ASSOC-->
                 <section id = "association">
                     <h2>Association ADABIAS <i class="fas fa-hands-helping"></i></h2>
@@ -263,9 +265,9 @@
 
 
     <!-- sources js -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src = "assets/js/script_centre_interet.js"></script>
 </body>
 
