--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
     <!-- ROW NAV -->
     <div class="row">
-        <nav class="nav nav-pills nav-justified col-md-12 container-fluid rounded">
+        <nav class="nav nav-pills nav-justified col-12 container-fluid flex-column flex-sm-row">
             <a class="nav-item nav-link" href="index.html">Accueil <i class="fas fa-home"></i></a>
             <a class="nav-item nav-link" href="centres_interet.html">Centres d'intérêt <i class="fas fa-bowling-ball"></i></a>
             <a class="nav-item nav-link" href="https://ariwf3.github.io/CV/" target="_blank">Curriculium Vitae <i class="fas fa-university"></i><i class="fas fa-pen"></i></a>
@@ -148,16 +148,13 @@
                         </div>
                         <div class="col-md-6 d-flex p-2 justify-content-around div_social">
                             <div>
-                                <a href ="https://www.linkedin.com/in/aristidebassole/" target="_blank" title ="Linkedin"><img src="cv/logos/iconfinder_circle-linkedin_317750.png" alt="Linkedin" class="social_img img-fluid" /></a>
+                                <a href ="https://www.linkedin.com/in/aristidebassole/" target="_blank" title ="Linkedin"><img src="assets/img/logos_images_index/iconfinder_circle-linkedin_317750.png" alt="Linkedin" class="social_img img-fluid" /></a>
                             </div>
                             <div>
-                                <a href="https://twitter.com/arilength" target="_blank" title ="twitter"><img src="cv/logos/iconfinder_circle-twitter_317749.png" alt="Twitter" class="social_img img-fluid" /></a>
+                                <a href="https://twitter.com/arilength" target="_blank" title ="twitter"><img src="assets/img/logos_images_index/iconfinder_circle-twitter_317749.png" alt="Twitter" class="social_img img-fluid" /></a>
                             </div>
                             <div>
-                                <a href="https://github.com/Ariwf3" target="_blank" title ="github"><img src="cv/logos/iconfinder_github_317712.png" alt="Github" class="social_img img-fluid" /></a>
-                            </div>
-                            <div>
-                                <a href="https://www.facebook.com/" target="_blank" title ="facebook"><img src="cv/logos/iconfinder_circle-facebook__317752.png" alt="Github" class="social_img img-fluid" /></a>
+                                <a href="https://github.com/Ariwf3" target="_blank" title ="github"><img src="assets/img/logos_images_index/iconfinder_github_317712.png" alt="Github" class="social_img img-fluid" /></a>
                             </div>
                         </div>
                     </div>
@@ -165,10 +162,8 @@
             </footer>
     </div>
     <!-- sources js -->
-    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src = "assets/js/ajax.js"></script> 
 </body>
 
