--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- ROW NAV -->
     <div class="row">
-        <nav class="nav nav-pills nav-justified col-12 rounded">
+        <nav class="nav nav-pills nav-justified col-12 flex-column flex-sm-row">
             <a class="nav-item nav-link active" href="#">Accueil <i class="fas fa-home"></i></a>
             <a class="nav-item nav-link" href="centres_interet.html">Centres d'intérêt <i class="fas fa-bowling-ball"></i></a>
             <a class="nav-item nav-link" href="https://ariwf3.github.io/CV/" target="_blank">Curriculum Vitae <i class="fas fa-university"></i><i
@@ -30,7 +30,7 @@
     <div class="container">
         <!-- ROW  HEADER-->
         <div class="row">
-            <header class="col-12 col-md-12">
+            <header class="col-12">
                 <!-- ROW PRESENTATION-->
                 <div class="row">
                     <div class="col-md-6 text-center presentation">
@@ -71,7 +71,7 @@
                     <a class="btn btn-primary btn-lg " href="https://fr.vikidia.org/wiki/Chat" target="_blank" role="button">Découvrir
                         mon espèce..</a>
                 </div>
-                <section id="parcours" class="">
+                <section id="parcours">
                     <h3 class="text-center">Mon apprentissage autodidacte <i class="fas fa-chalkboard-teacher"></i></h3>
                     <!-- ROW SECTION-->
                     <div class="row text-center">
@@ -107,7 +107,7 @@
     
     <!-- ROW FOOTER -->
     <div class="row">
-        <footer class="col-12 col-md-12">
+        <footer class="col-md-12">
             <!-- ROW NAVBAR -->
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-primary col-md-12">
@@ -162,24 +162,27 @@
                 <div class="col-md-6 d-flex p-2 justify-content-around div_social">
                     <div>
                         <a href="https://www.linkedin.com/in/aristidebassole/" target="_blank" title="Linkedin"><img src="assets/img/logos_images_index/iconfinder_circle-linkedin_317750.png"
-                                alt="Logo Linkedin" class="social_img img-fluid" /></a>
+                        alt="Logo Linkedin" class="social_img img-fluid" /></a>
                     </div>
                     <div>
                         <a href="https://twitter.com/arilength" target="_blank" title="twitter"><img src="assets/img/logos_images_index/iconfinder_circle-twitter_317749.png"
-                                alt="Logo Twitter" class="social_img img-fluid" /></a>
+                        alt="Logo Twitter" class="social_img img-fluid" /></a>
                     </div>
                     <div>
                         <a href="https://github.com/Ariwf3" target="_blank" title="github"><img src="assets/img/logos_images_index/iconfinder_github_317712.png"
-                                alt="Logo Github" class="social_img img-fluid" /></a>
+                        alt="Logo Github" class="social_img img-fluid" /></a>
                     </div>
                 </div>
+                <!-- FIN DIV SOCIAL-->
             </div>
             <!-- END ROW CONTACT SOCIAL-->
         </footer>
     </div>
     <!-- FIN ROW FOOTER -->
-    
 
+    <!-- sources js -->
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
