ajout favicon finalisation style  centre intérêts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Accueil Site Bootstrap Aristide Bassolé</title>
+    <!-- Fav Icon -->
+    <link rel="icon" href="assets/img/logos_images_index/chat.png" type="image/png">
+    <!-- Fav Icon -->
+    
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!-- font awesome sources -->
