--- a/centres_interet.html
+++ b/centres_interet.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Centres d'intérêts-Aristide Bassolé site Bootstrap</title>
+    <title>Centres d'intérêt-Aristide Bassolé site Bootstrap</title>
+    <!-- Fav Icon -->
+    <link rel="icon" href="assets/img/logos_images_index/chat.png" type="image/png">
+    <!-- Fav Icon -->
+    
     <!-- bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- bootstrap CDN -->
@@ -24,7 +28,7 @@
             <figure>
                 <img src="assets/img/bannieres/games.jpeg" class="figure-img img-fluid" alt="">
                 <figcaption class ="figure-caption" id="titre_centre">
-                    <h1 id="ancre_h1">Mes centres d'intérêts <i class="fas fa-umbrella-beach" id="umbrella"></i></h1>
+                    <h1 id="ancre_h1">Mes centres d'intérêt <i class="fas fa-umbrella-beach" id="umbrella"></i></h1>
                 </figcaption>    
             </figure>
         </header>
@@ -35,7 +39,7 @@
     <div class="row">
         <nav class="nav nav-pills nav-justified col-12 container-fluid rounded flex-column flex-sm-row">
             <a class="nav-item nav-link" href="index.html">Accueil <i class="fas fa-home"></i></a>
-            <a class="nav-item nav-link active" href="#">Centre d'intérêts <i class="fas fa-bowling-ball"></i></a>
+            <a class="nav-item nav-link active" href="#">Centres d'intérêt <i class="fas fa-bowling-ball"></i></a>
             <a class="nav-item nav-link" href="https://ariwf3.github.io/CV/" target="_blank">Curriculum Vitae <i class="fas fa-university"></i><i class="fas fa-pen"></i></a>
             <a class="nav-item nav-link" href="contact.html" tabindex="-1">Contact <i class="fas fa-address-card"></i></a>
         </nav>
@@ -138,7 +142,7 @@
                                 <img src="assets/img/centres_interets/voyage/prague.jpg" class="d-block w-100 rounded img-thumbnail" alt="photo Prague">
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/img/centres_interets/voyage/algarve.jpeg" class="d-block w-100 rounded img-thumbnail" alt="photo algarve">
+                                <img src="assets/img/centres_interets/voyage/algarve.jpg" class="d-block w-100 rounded img-thumbnail" alt="photo algarve">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carousel_voyages" role="button" data-slide="prev">
@@ -268,7 +272,6 @@
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src = "assets/js/script_centre_interet.js"></script>
 </body>
 
 </html>
