--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact-Aristide Bassolé site Bootstrap</title>
+    <!-- Fav Icon -->
+    <link rel="icon" href="assets/img/logos_images_index/chat.png" type="image/png">
+    <!-- Fav Icon -->
+
     <!-- bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- bootstrap CDN -->
