formulaire fonctionnel uniquement en jQuery version front du site ok

--- a/centres_interet.html
+++ b/centres_interet.html
@@ -69,7 +69,7 @@
                 <!-- SECTION ASSOC-->
                 <section id = "association">
                     <h2>Association ADABIAS <i class="fas fa-hands-helping"></i></h2>
-                    <p><i class="fas fa-paper-plane"></i>  Membre d'une association caritative interculturelle,Vente annuelle d'objets artisanaux et de spécialités culinaires destinés au financement deprojets au Burkina Faso notamment la scolarisation d’enfants.</p>
+                    <p><i class="fas fa-paper-plane"></i>  Membre d'une association caritative interculturelle,Vente annuelle d'objets artisanaux et de spécialités culinaires destinés au financement de projets au Burkina Faso notamment la scolarisation d’enfants.</p>
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -197,7 +197,7 @@
                 <!-- SECTION LECTURE -->
                 <section id ="lecture">
                     <h2>Lecture <i class="fas fa-book-reader"></i></h2>
-                    <p><i class="fas fa-paper-plane"></i> Lectures diverses et variées (Presse spécialisée Web et informatique, romans policiers et fantastiques, bande dessinées, comics, mangas...)</p>
+                    <p><i class="fas fa-paper-plane"></i> Lectures diverses et variées (Presse spécialisée Web et informatique, romans policiers et fantastiques, bandes dessinées, comics, mangas...)</p>
                     <div id="carousel_lecture" class="carousel slide carousel-fade" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
