--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p>Il utilise plusieurs fonctionnalités comme le système de grille, des classes avec des styles
                         prédéfinis, boutons, barres de navigation, carroussels ainsi que du ainsi que jQuery, ajax et
                         php pour le formulaire. Vous pourrez aussi trouver un CV plus détaillé sur moi fait "from
-                        scratch" dans la rubrique <a href="">Curriculum Vitae.</a></p>
+                        scratch" sur le lien <a href="https://ariwf3.github.io/CV/" target="_blank">Curriculum Vitae.</a></p>
                     <p>Bonne visite <i class="fas fa-cat signature_cat"></i></p>
                     <a class="btn btn-primary btn-lg " href="https://fr.vikidia.org/wiki/Chat" target="_blank" role="button">Découvrir
                         mon espèce..</a>
@@ -159,8 +159,8 @@
                     <p><i class="fas fa-file-download lien_contact"></i> <a href="assets/file/cv_aristide_bassole.pdf"
                             target="blank" title="Ouvrir dans un nouvel onglet ou télécharger" class="lien_contact">Mon
                             CV (pdf)</a></p>
-                    <h3 class="titre_iframe"><i class="fas fa-map-marker-alt"></i> Me trouver</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5480121.578836245!2d0.4985675391186005!3d47.88141302629982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701c64657be9%3A0xbf05ba902bfe4aab!2s3w+Academy!5e0!3m2!1sfr!2sfr!4v1547133545632"
+                    <h3 class="titre_iframe d-none d-md-block"><i class="fas fa-map-marker-alt"></i> Me trouver</h3>
+                    <iframe class="d-none d-md-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5480121.578836245!2d0.4985675391186005!3d47.88141302629982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701c64657be9%3A0xbf05ba902bfe4aab!2s3w+Academy!5e0!3m2!1sfr!2sfr!4v1547133545632"
                         style="border:0" allowfullscreen class=img-thumbnail></iframe>
                 </div>
                 <div class="col-md-6 d-flex p-2 justify-content-around div_social">
