corrections responsive, ajouts contacts: bouton reset, fonctions de nettoyages dans le js pour nettoyer les classes avec le reset, ajouts variables et bouton pour recharger la page une fois le formulaire envoyé ou suite à une erreur formulaire fonctionnel en mode maquette(front)

--- a/centres_interet.html
+++ b/centres_interet.html
@@ -37,7 +37,7 @@
 
     <!-- ROW NAV -->
     <div class="row">
-        <nav class="nav nav-pills nav-justified col-12 container-fluid rounded flex-column flex-sm-row">
+        <nav class="nav nav-pills nav-justified col-12 container-fluid rounded flex-column flex-md-row">
             <a class="nav-item nav-link" href="index.html">Accueil <i class="fas fa-home"></i></a>
             <a class="nav-item nav-link active" href="#">Centres d'intérêt <i class="fas fa-bowling-ball"></i></a>
             <a class="nav-item nav-link" href="https://ariwf3.github.io/CV/" target="_blank">Curriculum Vitae <i class="fas fa-university"></i><i class="fas fa-pen"></i></a>
