--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- ROW NAV -->
     <div class="row">
-        <nav class="nav nav-pills nav-justified col-12 flex-column flex-sm-row">
+        <nav class="nav nav-pills nav-justified col-12 flex-column flex-md-row">
             <a class="nav-item nav-link active" href="#">Accueil <i class="fas fa-home"></i></a>
             <a class="nav-item nav-link" href="centres_interet.html">Centres d'intérêt <i class="fas fa-bowling-ball"></i></a>
             <a class="nav-item nav-link" href="https://ariwf3.github.io/CV/" target="_blank">Curriculum Vitae <i class="fas fa-university"></i><i
@@ -37,7 +37,7 @@
             <header class="col-12">
                 <!-- ROW PRESENTATION-->
                 <div class="row">
-                    <div class="col-md-6 text-center presentation">
+                    <div class="col-lg-6 text-center presentation">
                         <h1 class="titre_principal" id="ancre_h1"><em>Aristide Bassolé Développeur Web</em> en
                             recherche <span id="adoption">d'adoption<i class="fas fa-heart"></i></span></h1>
                         <p>
@@ -48,7 +48,7 @@
                         </p>
                         <p><i class="fas fa-cat signature_cat"></i></p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <figure class="text-center figure_chat">
                             <img src="assets/img/logos_images_index/chat.png" class="img-chat figure-img img-fluid  " alt="Image chat">
                         </figure>
@@ -154,16 +154,18 @@
 
             <!-- ROW CONTACT SOCIAL-->
             <div class="row">
-                <div class="col-md-6 infos_contact">
+                <div class="col-lg-6 infos_contact">
                     <p><i class="fas fa-envelope lien_contact"></i> <a href="mailto:bassole.aristide@laposte.net" class="lien_contact">bassole.aristide@laposte.net</a></p>
                     <p><i class="fas fa-file-download lien_contact"></i> <a href="assets/file/cv_aristide_bassole.pdf"
                             target="blank" title="Ouvrir dans un nouvel onglet ou télécharger" class="lien_contact">Mon
                             CV (pdf)</a></p>
                     <h3 class="titre_iframe d-none d-md-block"><i class="fas fa-map-marker-alt"></i> Me trouver</h3>
-                    <iframe class="d-none d-md-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5480121.578836245!2d0.4985675391186005!3d47.88141302629982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701c64657be9%3A0xbf05ba902bfe4aab!2s3w+Academy!5e0!3m2!1sfr!2sfr!4v1547133545632"
-                        style="border:0" allowfullscreen class=img-thumbnail></iframe>
+                    <!-- IFRAME -->
+                    <iframe class="d-none d-lg-block" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5480121.578836245!2d0.4985675391186005!3d47.88141302629982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e6701c64657be9%3A0xbf05ba902bfe4aab!2s3w+Academy!5e0!3m2!1sfr!2sfr!4v1547133545632"
+                        style="border:0" allowfullscreen class=img-thumbnail>
+                    </iframe>
                 </div>
-                <div class="col-md-6 d-flex p-2 justify-content-around div_social">
+                <div class="col-lg-6 d-flex p-2 justify-content-around div_social">
                     <div>
                         <a href="https://www.linkedin.com/in/aristidebassole/" target="_blank" title="Linkedin"><img src="assets/img/logos_images_index/iconfinder_circle-linkedin_317750.png"
                         alt="Logo Linkedin" class="social_img img-fluid" /></a>
