--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                         </div>
                         <!-- PRENOM -->
                         <div class="col col-prenom">
-                            <input type="text" class="form-control" placeholder="Prénom.." id="prenom" name="prenom" required>
+                            <input type="text" class="form-control" placeholder="Prénom.." id="prenom" class="testclass" name="prenom" required>
                         </div>
                     </div>
                     <!-- FIN ROW NOM PRENOM-->
@@ -91,7 +91,7 @@
                     </div>
                     <!-- ENVOI -->
                     <input type="submit" value="Envoyer" class="btn btn-primary">
-                    <input type="reset" value="Réinitialiser" class="btn btn-info" id="reinit">
+                    <input type="reset" value="Réinitialiser" class="btn btn-warning" id="reinit">
                 </form>
             </div>
             <!-- FIN COL FORMULAIRE-->
