nombreux changements serveurs fonction mail et sécurté améliorés

--- a/contact.html
+++ b/contact.html
@@ -170,6 +170,7 @@
             </footer>
     </div>
     <!-- sources js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src = "assets/js/script_ajax.js"></script> 
